auth comp+routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-column-one></app-column-one>
+
 <h1>welcome to jobguide</h1>
 <p>checking to see if primeng style applies:</p>
 <p-button label="Submit"></p-button>
