some styling for the login page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-column-one></app-column-one>
-
+<!--
 <h1>welcome to jobguide</h1>
 <p>checking to see if primeng style applies:</p>
 <p-button label="Submit"></p-button>
 <p>checking to see if angular material style applies:</p>
 <button mat-button color="accent">Accent</button>
-<p>all good</p>
+<p>all good</p>-->
+<app-login></app-login>
