--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="login-container p-d-flex">
+  <div class="login-panel">
+    <div class="left-row">
+      <div class="welcome">
+        <img src="../../../../assets/applogo.png"
+             class="logoimage">
+        <p>Welcome to GuideJobs!</p>
+      </div>
+    </div>
+    <div class="right-row">
+      <form [formGroup]="loginForm" id="ngForm">
+        <mat-form-field class="form-field">
+          <input type="email" class="" matInput placeholder="Email"   formControlName="email">
+        </mat-form-field>
+        <mat-form-field class="form-field">
+          <input type="password" class="" matInput placeholder="Password"   formControlName="password">
+        </mat-form-field>
+      </form>
+      <button pButton type="submit" class="btn">Log in
+      </button>
+    </div>
+  </div>
+</div>
+
