--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -16,7 +16,7 @@
           <input type="password" class="" matInput placeholder="Password"   formControlName="password">
         </mat-form-field>
       </form>
-      <button pButton type="submit" class="btn">Log in
+      <button pButton type="submit" class="btn" (click)="onSubmit()">Log in
       </button>
     </div>
   </div>
