login buttons, navbar, routing

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -8,15 +8,21 @@
       </div>
     </div>
     <div class="right-row">
-      <form [formGroup]="loginForm" id="ngForm">
+      <form [formGroup]="loginForm" id="ngForm" #authForm="ngForm">
         <mat-form-field class="form-field">
-          <input type="email" class="" matInput placeholder="Email"   formControlName="email">
+          <input type="email" class="" matInput placeholder="Email"    formControlName="email" required email>
         </mat-form-field>
         <mat-form-field class="form-field">
-          <input type="password" class="" matInput placeholder="Password"   formControlName="password">
+          <input type="password" class="" matInput placeholder="Password"   formControlName="password" required minlength="6">
         </mat-form-field>
       </form>
-      <button pButton type="submit" class="btn" (click)="onSubmit()">Log in
+      <button routerLink="/home-page"
+        pButton type="submit" class="btn" (click)="onSubmit()" type="button" [disabled]="!authForm.valid">
+        {{ isLoginMode ? 'Log in' : 'Sign Up'}}
+      </button>
+      <pre></pre>
+      <button pButton type="submit" class="btn" (click)="onSwitchMode()" type="button">
+        Switch to {{ isLoginMode ? 'Sign Up' : 'Login'}}
       </button>
     </div>
   </div>
