--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,14 +1,13 @@
 <div>
-      <li class="nav-item">
-        <a class="nav-link"
-           [routerLink]="['register']" routerLinkActive="active">Register</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"
-           [routerLink]="['login']" routerLinkActive="active">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link "
-           [routerLink]="['reset-password']" routerLinkActive="active">Reset Password</a>
-      </li>
+  <mat-toolbar class="navbar">
+    <button routerLink="/home-page"
+      mat-button>GuideJobs</button>
+    <button routerLink="/jobs"
+      mat-button class="btn">Jobs</button>
+    <button routerLink="/account"
+      mat-button class="btn">Account</button>
+    <button routerLink="/login"
+            mat-button class="btn">Sign out</button>
+  </mat-toolbar>
+
 </div>
