fixed position on topbar

--- a/src/app/home-page/components/home-page.component.html
+++ b/src/app/home-page/components/home-page.component.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<p>home page</p>
+
+<div class="homepage-container">
+  <app-header></app-header>
+  <div class="back">
+  </div>
+</div>
