style for the homepage

--- a/src/app/home-page/components/home-page.component.html
+++ b/src/app/home-page/components/home-page.component.html
@@ -4,12 +4,12 @@
   <div class="welcome-second">
     <div class="welcome-paragraph">
       <div class="mediq-row">
-        <p>Bun venit in jobGuide!</p>
+        <h3><b>Bun venit in jobGuide!</b></h3>
       </div>
       <div class="paragraph">
-        <p>Aveți aici instrumentul care pune în valoare punctele forte ale fiecăruia!
+        <p><b>Aveți aici instrumentul care pune în valoare punctele forte ale fiecăruia!
           Colaborarea există, documentele primesc valoare, se câstigă timp, cu implicare minimă
-          și costuri reduse.Astfel, vă mulțumim pentru că ați decis sa colaborați cu noi!
+          și costuri reduse.Astfel, vă mulțumim pentru că ați decis sa colaborați cu noi!</b>
         </p>
       </div>
     </div>
@@ -17,8 +17,23 @@
     <div class="nd">
       <img src="../assets/backgr.jpg"
            class="image">
-      <p class="panmcs">Unitate aflata în PROCES DE ACREDITARE ANMCS</p>
     </div>
+  </div>
+
+  <div class="in-card">
+    <mat-card>
+      <mat-card-title style="color: #457b9d;">Curajul este in tine!</mat-card-title>
+      <mat-card-subtitle>Caută-ți jobul mult visat și aplică. De restul ne ocupăm noi!</mat-card-subtitle>
+
+      <mat-card-content>
+        <img mat-card-image src="../assets/employees.jpeg">
+      </mat-card-content>
+      <mat-card-footer>
+        <mat-card-actions>
+          <button mat-button class="searchbtn" (click)="onSeeJobs()"><mat-icon>search</mat-icon> Vezi joburi</button>
+        </mat-card-actions>
+      </mat-card-footer>
+    </mat-card>
   </div>
 
 </div>
