--- a/src/app/home-page/components/home-page.component.css
+++ b/src/app/home-page/components/home-page.component.css
@@ -83,6 +83,11 @@
   border-radius: 10px;
 }
 
+
+:host ::ng-deep .mat-card:hover{
+  background: #caf0f8;
+}
+
 .searchbtn{
   border-radius: 10px;
   width:200px;
