--- a/src/app/job-card/job-card.component.css
+++ b/src/app/job-card/job-card.component.css
@@ -2,3 +2,22 @@
   width: 30rem;
   background: #E6EEF2;
 }
+
+:host ::ng-deep .mat-card-title {
+  text-align: center;
+}
+
+:host ::ng-deep .mat-card-subtitle {
+  text-align: center;
+}
+:host ::ng-deep .mat-card-actions {
+  text-align: center;
+}
+
+.details-button{
+  background: #90e0ef;
+}
+
+.details-button:hover{
+  background: #caf0f8;
+}
