--- a/src/app/job-card/job-card.component.html
+++ b/src/app/job-card/job-card.component.html
@@ -1,7 +1,11 @@
 <mat-card>
   <mat-card-title>
-    aici se extrage numele de pe obiect
+    {{recievedJob.title}}
   </mat-card-title>
-  <mat-card-subtitle>	aici se extrage locatia de pe obiect</mat-card-subtitle>
-
+  <mat-card-subtitle>	Locatie: {{recievedJob.city}}</mat-card-subtitle>
+  <mat-card-content>
+    <mat-card-actions>
+      <button pButton class="details-button">Vezi detalii</button>
+    </mat-card-actions>
+  </mat-card-content>
 </mat-card>
