--- a/src/app/jobs-user/components/jobs-user.component.html
+++ b/src/app/jobs-user/components/jobs-user.component.html
@@ -2,7 +2,7 @@
 <div class="jobs-container p-d-flexbox">
 <div class="filters-row">
     <h3>Filtrează după:</h3>
-    <p-listbox [options]="cities" [(ngModel)]="selectedCity" [metaKeySelection]="false" [checkbox]="true"
+    <p-listbox [options]="cities" [(ngModel)]="selectedCity" (ngModelChange)="filterJobsByCity()" [metaKeySelection]="false" [checkbox]="true"
                [filter]="true" [multiple]="true" filterPlaceHolder="Oras..." optionLabel="name" [listStyle]="{'max-height':'250px'}" [style]="{'margin-bottom': '2rem','width': '17rem','margin-left': '2rem'}">
       <ng-template let-city pTemplate="item">
         <div class="country-item">
@@ -10,7 +10,7 @@
         </div>
       </ng-template>
     </p-listbox>
-    <p-listbox [options]="jobTypes" [(ngModel)]="selectedType" [metaKeySelection]="false" [checkbox]="true"
+    <p-listbox [options]="jobTypes" [(ngModel)]="selectedType" (ngModelChange)="filterJobsByType()" [metaKeySelection]="false" [checkbox]="true"
                [filter]="true" [multiple]="true" filterPlaceHolder="Tip..." optionLabel="type" [listStyle]="{'max-height':'250px'}" [style]="{'margin-bottom': '2rem','width': '17rem','margin-left': '2rem'}">
       <ng-template let-type pTemplate="item">
         <div class="country-item">
@@ -20,7 +20,7 @@
     </p-listbox>
   </div>
   <div class="jobs-row p-flex-row">
-    <div *ngFor="let job of jobs;let i=index">
+    <div *ngFor="let job of filteredJobs;let i=index">
       <app-job-card
       [recievedJob]="job">
       </app-job-card>
