--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -8,23 +8,27 @@
       </div>
     </div>
     <div class="right-row">
-      <form [formGroup]="loginForm" id="ngForm" #authForm="ngForm">
+      <form [formGroup]="loginForm" id="ngForm" #authForm="ngForm" >
         <mat-form-field class="form-field">
-          <input type="email" class="" matInput placeholder="Email"    formControlName="email" required email
-                  [(ngModel)]="username">
+          <input type="email" class="" matInput placeholder="Email" formControlName="email" id="email" required email
+                 >
         </mat-form-field>
         <mat-form-field class="form-field">
-          <input type="password" class="" matInput placeholder="Password"   formControlName="password" required minlength="6"
-                 [(ngModel)]="password">
+          <input type="password" class="" matInput placeholder="Password"  formControlName="password" id="password" required minlength="6"
+                 >
         </mat-form-field>
       </form>
       <button
-        pButton type="submit" class="btn" (click)="checkLogin()" type="button" [disabled]="!authForm.valid">
+        pButton type="submit" class="btn" (click)="login(loginForm)" type="button" [disabled]="!authForm.valid" >
         Log in
       </button>
       <pre></pre>
       <button pButton type="submit" class="btn"  type="button" routerLink="/register">
         Create an account
+      </button>
+      <pre></pre>
+      <button pButton type="submit" class="btn"  type="button" routerLink="/home">
+        Back home
       </button>
     </div>
   </div>
