--- a/src/app/home-page/components/home-page.component.css
+++ b/src/app/home-page/components/home-page.component.css
@@ -1,7 +1,7 @@
 .homepage-container{
   width: 100%;
   height: 100%;
-  background: #edf6f9;
+  background: #d6e2e9;
   font-family: "Times New Roman", Times, serif;
 }
 
