--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -10,11 +10,11 @@
     <div class="right-row">
       <form [formGroup]="loginForm" id="ngForm" #authForm="ngForm" >
         <mat-form-field class="form-field">
-          <input type="email" class="" matInput placeholder="Email" formControlName="email" id="email" required email
+          <input type="email" class="" matInput placeholder="Email" formControlName="userName" id="email" required email
                  >
         </mat-form-field>
         <mat-form-field class="form-field">
-          <input type="password" class="" matInput placeholder="Password"  formControlName="password" id="password" required minlength="6"
+          <input type="password" class="" matInput placeholder="Password"  formControlName="userPassword" id="password" required minlength="6"
                  >
         </mat-form-field>
       </form>
@@ -23,7 +23,7 @@
         Log in
       </button>
       <pre></pre>
-      <button pButton type="submit" class="btn"  type="button" routerLink="/register">
+      <button pButton type="submit" class="btn"  type="button" routerLink="/registerNewUser">
         Create an account
       </button>
       <pre></pre>
